Fix hiding settings dialog on small screens

--- a/www/css/telepathy.css
+++ b/www/css/telepathy.css
@@ -124,7 +124,7 @@ fieldset {
 
 .modal {
 	position: absolute;
-	top: -100%;
+	top: -200%;
 	left: 50%;
 	width: 500px;
 	margin: 0 0 0 -250px;
